@@ -4,12 +4,12 @@ public class Planet extends CelestialObject {
     private Star centerStar;
 
     public Planet() {
-        super(); 
+        super();
         this.centerStar = new Star();
     }
 
     public Planet(String name, double x, double y, double z, Star centerStar) {
-        super(name, x, y, z); 
+        super(name, x, y, z);
         this.centerStar = centerStar;
     }
 
@@ -23,19 +23,21 @@ public class Planet extends CelestialObject {
 
     @Override
     public String toString() {
-        double distance = CelestialObject.getDistanceBetween(this, centerStar);
-        return String.format("%s circles around %s at the %.3f AU", 
-                           getName(), centerStar.getName(), distance);
+        return "%s circles around %s at the %.3f AU".formatted(getName(), centerStar.getName(),
+                CelestialObject.getDistanceBetween(this, centerStar));
     }
 
     @Override
     public boolean equals(Object obj) {
-        if (this == obj) return true;
-        if (obj == null || getClass() != obj.getClass()) return false;
-        if (!super.equals(obj)) return false; 
-        
-        Planet planet = (Planet) obj;
-        return Objects.equals(centerStar, planet.centerStar);
+        if (this == obj)
+            return true;
+        if (!(obj instanceof Planet))
+            return false;
+        if (!super.equals(obj))
+            return false;
+
+        Planet other = (Planet) obj;
+        return Objects.equals(centerStar, other.centerStar);
     }
 
     @Override
