@@ -1,16 +1,7 @@
-// package StarOverride;
 import java.util.Objects;
+
 public class Star extends CelestialObject {
-    private double magnitude = 0.0;
-
-    public Star() {
-        super();
-    }
-
-    public Star(String name, double x, double y, double z, double magnitude) {
-        super(name, x, y, z); 
-        this.magnitude = magnitude;
-    }
+    private double magnitude;
 
     public double getMagnitude() {
         return magnitude;
@@ -20,23 +11,36 @@ public class Star extends CelestialObject {
         this.magnitude = magnitude;
     }
 
+    public Star() {
+        super();
+        this.magnitude = 0.0;
+    }
+
+    public Star(String name, double x, double y, double z, double magnitude) {
+        super(name, x, y, z);
+        this.magnitude = magnitude;
+    }
+
     @Override
     public String toString() {
-        return String.format("%s shines at the %.3f magnitude", getName(), magnitude);
+        return "%s shines at the %.3f magnitude".formatted(getName(), this.magnitude);
     }
 
     @Override
     public boolean equals(Object obj) {
-        if (this == obj) return true;
-        if (obj == null || getClass() != obj.getClass()) return false;
-        if (!super.equals(obj)) return false; 
-        
-        Star star = (Star) obj;
-        return Double.compare(star.magnitude, magnitude) == 0;
+        if (this == obj)
+            return true;
+        if (!(obj instanceof Star))
+            return false;
+        if (!super.equals(obj))
+            return false;
+
+        Star other = (Star) obj;
+        return Double.compare(magnitude, other.magnitude) == 0;
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(super.hashCode(), magnitude);
+        return Objects.hash(name, x, y, z, magnitude);
     }
 }
